--- a/client/src/components/CreateEvent/style.css
+++ b/client/src/components/CreateEvent/style.css
@@ -1186,11 +1186,18 @@ div {
   left                : 485px;
   transform           : rotate(0deg);
   opacity             : 1.0;
+  transition          : all 0.4s ease-in-out;
   font-family         : "Futura-MediumItalic", Helvetica, Arial, serif;
   font-size           : 22.0px;
   color               : rgba(254, 255, 254, 1.0);
   text-align          : center;
   line-height         : 30.0px;
+}
+.createevent .create {
+  pointer-events      : auto;
+}
+.createevent .create:hover {
+  transform           : translate(5px, 0);
 }
 /* .anima-animate-appear prefix for appear animations */
 .anima-animate-appear {
