create event page routes are finished tested and working

--- a/client/src/components/CreateEventPage/style.css
+++ b/client/src/components/CreateEventPage/style.css
@@ -984,14 +984,14 @@ div {
   text-align          : center;
   line-height         : 40.0px;
 }
-.createevent .home {
+.createevent .home1 {
   background-color    : rgba(255,255,255,0.0);
   top                 : 67px;
   height              : auto;
   width               : auto;
   position            : absolute;
   margin              : 0;
-  left                : 799px;
+  left                : 805px;
   transform           : rotate(0deg);
   opacity             : 1.0;
   transition          : all 0.4s ease-in-out;
@@ -1001,10 +1001,10 @@ div {
   text-align          : center;
   line-height         : 30.0px;
 }
-.createevent .home {
+.createevent .home1 {
   pointer-events      : auto;
 }
-.createevent .home:hover {
+.createevent .home1:hover {
   transform           : translate(5px, 0);
 }
 .createevent .profile {
@@ -1030,14 +1030,14 @@ div {
 .createevent .profile:hover {
   transform           : translate(5px, 0);
 }
-.createevent .about {
+.createevent .about1 {
   background-color    : rgba(255,255,255,0.0);
   top                 : 67px;
   height              : auto;
   width               : auto;
   position            : absolute;
   margin              : 0;
-  left                : 884px;
+  left                : 890px;
   transform           : rotate(0deg);
   opacity             : 1.0;
   transition          : all 0.4s ease-in-out;
@@ -1047,10 +1047,10 @@ div {
   text-align          : center;
   line-height         : 30.0px;
 }
-.createevent .about {
+.createevent .about1 {
   pointer-events      : auto;
 }
-.createevent .about:hover {
+.createevent .about1:hover {
   transform           : translate(5px, 0);
 }
 .createevent .eventname {
