all routes are working, tested, and ready to rumble

--- a/client/src/components/SearchEventPage/style.css
+++ b/client/src/components/SearchEventPage/style.css
@@ -984,14 +984,14 @@ div {
   text-align          : center;
   line-height         : 40.0px;
 }
-.searchevent .home {
+.searchevent .home1 {
   background-color    : rgba(255,255,255,0.0);
   top                 : 67px;
   height              : auto;
   width               : auto;
   position            : absolute;
   margin              : 0;
-  left                : 799px;
+  left                : 805px;
   transform           : rotate(0deg);
   opacity             : 1.0;
   transition          : all 0.4s ease-in-out;
@@ -1001,10 +1001,10 @@ div {
   text-align          : center;
   line-height         : 30.0px;
 }
-.searchevent .home {
+.searchevent .home1 {
   pointer-events      : auto;
 }
-.searchevent .home:hover {
+.searchevent .home1:hover {
   transform           : translate(5px, 0);
 }
 .searchevent .profile {
@@ -1080,14 +1080,14 @@ div {
 .searchevent .search:hover {
   transform           : translate(5px, 0);
 }
-.searchevent .about {
+.searchevent .about1 {
   background-color    : rgba(255,255,255,0.0);
   top                 : 67px;
   height              : auto;
   width               : auto;
   position            : absolute;
   margin              : 0;
-  left                : 884px;
+  left                : 890px;
   transform           : rotate(0deg);
   opacity             : 1.0;
   transition          : all 0.4s ease-in-out;
@@ -1097,10 +1097,10 @@ div {
   text-align          : center;
   line-height         : 30.0px;
 }
-.searchevent .about {
+.searchevent .about1 {
   pointer-events      : auto;
 }
-.searchevent .about:hover {
+.searchevent .about1:hover {
   transform           : translate(5px, 0);
 }
 .searchevent .rectangle3 {
