all pages are styled and looking nice with the exception of the search event page at the moment

--- a/client/src/components/LoginPage/style.scss
+++ b/client/src/components/LoginPage/style.scss
@@ -763,6 +763,13 @@ div {
   transform: rotate(0deg);
   opacity: 1;
 }
+.rectanglecopy11{
+position:absolute;
+top:640px;
+left: 335px;
+
+
+}
 .login .rectanglecopy13 {
   opacity: 0;
   transform: translate(-25px, 0);
